# cpplox

./: CMakeLists.txt  example
cmake-debug-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  vm
cmake-debug-build/.cmake/api/v1/reply/: cache-v2-edb6c09d67b8283110a8.json  cmakeFiles-v1-14c0939a006e9de711a0.json  codemodel-v2-4c8575caa07f62ec75d0.json  codemodel-v2-8c1a438ef924e1e3e55a.json  index-2024-08-26T15-29-55-0607.json  index-2024-08-30T07-24-52-0510.json  target-vm-Debug-b03fd72ddbee1480b068.json  target-vm-Debug-d404bc94d92c4b50bf5f.json
include/: Chunk.h  Compiler.h  Instructions.h  Object.h  Parser.h  Scanner.h  Stringinterner.h  Token.h  Value.h  stdlibfuncs.h  vMachine.h
include/backend/: ByteCompiler.h  Chunk.h  Compiler.h  Object.h  ScopeManager.h
include/frontend/: Expression.h  Parser.h  Scanner.h  Statement.h  Token.h
include/helper/: Printer.h  Visit.h  run.h
include/vm/: vMachine.h
src/: Chunk.cpp  Compiler.cpp  Instructions.cpp  Object.cpp  Scanner.cpp  Stringinterner.cpp  Tests.cpp  Value.cpp  main.cpp  run.cpp  vMachine.cpp
src/backend/: ByteCompiler.cpp  Chunk.cpp  Compiler.cpp  ScopeManager.cpp
src/frontend/: Parser.cpp  Scanner.cpp
src/helper/: Printer.cpp  run.cpp
src/vm/: Value.cpp  vMachine.cpp
